* Removed `P.getOriginalValue()` in favor of `P.getValue()`.
* Simplified comparability semantics from ternary boolean logic to binary logic.
* Introduced `NotP` class for negation of `P`.
* Add barriers to `group(String)`, `groupCount(String)`, `tree(String)` and `subgraph(String)` steps.
* Increase minimum Java version from 1.8 to 11 for building and running.
* Moved all lambda oriented Gremlin tests to `LambdaStepTest` in the Java test suite.
* Removed the `@RemoteOnly` testing tag in Gherkin as lambda tests have all been moved to the Java test suite.
* Updated gremlin-javascript to use GraphBinary as default instead of GraphSONv3
* Added the `asNumber()` step to perform number conversion.
* Modified `asNumber()` to handle `OffsetDateTime` and `Date`
* Modified `dateDiff()` to return milliseconds instead of seconds
* Changed `repeat()` to make `repeatTraversal` global rather than a mix of local and global.
* Renamed many types in the grammar for consistent use of terms "Literal", "Argument", and "Varargs".
* Changed `gremlin-net` so that System.Text.Json is only listed as an explicit dependency when it is not available from the framework.
* Fixed translation of numeric literals for Go losing type definitions.
* Added `ParseBigInt()` in `gremlin-go` for parsing string into `big.Int`.
* Expanded gherkin syntax to directly configure traversal side effects in feature tests.
* Made `Mutating` interface independent from `Configuring`.
* Removed undocumented `with()` modulation from `addV()`, `addE()`, `mergeV()` and `mergeE()`.
* Updated which steps are able to accept arguments in grammar.
* Introduced `GValue` to represent parameterized values in a `GraphTraversal`.
* Added optional traversal cache to `GremlinLangScriptEngine`.
* Introduced `StepContract` interfaces for all parameterizable steps.
* Decoupled management of id, label, and properties from `Configuring` interface in `addV()`, `addE()` and `property()`.