@@ -198,16 +198,11 @@ jobs:
         run: |
           mvn clean install -pl $EXCLUDE_MODULES -q -DskipTests -Dci
           mvn verify -pl gremlin-driver -DskipIntegrationTests=false
-  javascript:
-    name: javascript
+  javascript-node20:
+    name: javascript-all-node20
     timeout-minutes: 15
     needs: cache-gremlin-server-docker-image
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        # Windows Disabled until Linux containers are supported on Windows runners: https://github.com/actions/virtual-environments/issues/252
-        # os: [ubuntu-latest, windows-latest]
-        os: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - name: Set up JDK 11
@@ -216,7 +211,6 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       - name: Get Cached Server Base Image
-        if: matrix.os == 'ubuntu-latest'
         uses: actions/cache@v4
         id: gremlin-server-test-docker-image
         with:
@@ -224,12 +218,6 @@ jobs:
             ./gremlin-server/*
             ~/.m2/repository/org/apache/tinkerpop/*
           key: ${{ github.sha }}
-#      - name: Download Server Base Image
-#        if: matrix.os == 'windows-latest'
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: ${{ github.sha }}
-#          path: ./gremlin-server
       - name: Load Docker Image
         working-directory: ./gremlin-server
         run: docker load --input gremlin-server.tar
@@ -237,7 +225,63 @@ jobs:
         run: |
           EXCLUDE="-:gremlin-dotnet-source,-:gremlin-dotnet-tests,-:gremlin-go,-:gremlin-python,$EXCLUDE_FOR_GLV"
           mvn clean install -pl $EXCLUDE -q -DskipTests -Dci
-          mvn verify -pl :gremlin-javascript,:gremlint,:gremlin-mcp
+          mvn verify -pl :gremlin-javascript,:gremlint,:gremlin-mcp -Dnode.test.version=20
+  javascript-node22:
+    name: javascript-glv-node22
+    timeout-minutes: 15
+    needs: cache-gremlin-server-docker-image
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - name: Set up JDK 11
+        uses: actions/setup-java@v5
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Get Cached Server Base Image
+        uses: actions/cache@v4
+        id: gremlin-server-test-docker-image
+        with:
+          path: |
+            ./gremlin-server/*
+            ~/.m2/repository/org/apache/tinkerpop/*
+          key: ${{ github.sha }}
+      - name: Load Docker Image
+        working-directory: ./gremlin-server
+        run: docker load --input gremlin-server.tar
+      - name: Build with Maven
+        run: |
+          EXCLUDE="-:gremlin-dotnet-source,-:gremlin-dotnet-tests,-:gremlin-go,-:gremlin-python,$EXCLUDE_FOR_GLV"
+          mvn clean install -pl $EXCLUDE -q -DskipTests -Dci
+          mvn verify -pl :gremlin-javascript -Dnode.test.version=22
+  javascript-node24:
+    name: javascript-glv-node24
+    timeout-minutes: 15
+    needs: cache-gremlin-server-docker-image
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - name: Set up JDK 11
+        uses: actions/setup-java@v5
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Get Cached Server Base Image
+        uses: actions/cache@v4
+        id: gremlin-server-test-docker-image
+        with:
+          path: |
+            ./gremlin-server/*
+            ~/.m2/repository/org/apache/tinkerpop/*
+          key: ${{ github.sha }}
+      - name: Load Docker Image
+        working-directory: ./gremlin-server
+        run: docker load --input gremlin-server.tar
+      - name: Build with Maven
+        run: |
+          EXCLUDE="-:gremlin-dotnet-source,-:gremlin-dotnet-tests,-:gremlin-go,-:gremlin-python,$EXCLUDE_FOR_GLV"
+          mvn clean install -pl $EXCLUDE -q -DskipTests -Dci
+          mvn verify -pl :gremlin-javascript -Dnode.test.version=24
   python:
     name: python
     timeout-minutes: 20
