@@ -105,9 +105,10 @@ This release also includes changes from <<release-3-7-XXX, 3.7.XXX>>.
 * Introduced `NotP` class for negation of `P`.
 * Add barriers to `group(String)`, `groupCount(String)`, `tree(String)` and `subgraph(String)` steps.
 * Increase minimum Java version from 1.8 to 11 for building and running.
+* Add support for Node 22 and 24 alongside Node 20.
 * Moved all lambda oriented Gremlin tests to `LambdaStepTest` in the Java test suite.
 * Removed the `@RemoteOnly` testing tag in Gherkin as lambda tests have all been moved to the Java test suite.
-* Updated gremlin-javascript to use GraphBinary as default instead of GraphSONv3
+* Updated gremlin-javascript to use GraphBinary as default instead of GraphSONv3.
 * Added the `asNumber()` step to perform number conversion.
 * Modified `asNumber()` to handle `OffsetDateTime` and `Date`
 * Modified `dateDiff()` to return milliseconds instead of seconds
